<resources>
    <string name="app_name">TicTacToeAdvanced</string>
    <string name="first_human">You go first</string>
    <string name="turn_human">Your turn</string>
    <string name="turn_computer">Computer\'s turn</string>
    <string name="turn_player_one">Player One\'s turn</string>
    <string name="turn_player_two">Player Two\'s turn</string>
    <string name="result_tie">It\'s a tie!</string>
    <string name="result_human_wins">You Won!</string>
    <string name="result_android_wins">Computer Won!</string>
    <string name="result_player_one_wins">Player One Won!</string>
    <string name="result_player_two_wins">Player Two Won!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="results">Results:</string>
    <string name="human">Human:  </string>
    <string name="ties">Ties:  </string>
    <string name="android">Computer:  </string>
    <string name="player_one">Player One:  </string>
    <string name="player_two">Player Two:  </string>
    <string name="new_game">New Game</string>
    <string name="exit_game">Exit Game</string>
</resources>
